# constraint_bootstrap_v1

./: .gitignore  README.md  compare_adv_CA.csv  compare_adv_v3.csv  compare_adv_v4_new.csv  compare_c_decay0.csv  compare_c_decay003.csv  compare_seed123_1000_compete.csv  compare_stress_CA.csv  compare_stress_CA_v2.csv  demo_prime_steps200.txt  frozen.json  learn_on.json  metrics_adv_v4.json  out_adv_A.txt  out_adv_A_2k.txt  out_adv_A_v2.txt  out_adv_A_v3.txt  out_adv_A_v4.txt  out_adv_C_seed1.txt  out_adv_C_stress.txt  out_adv_C_v3.txt  out_adv_baseline.txt  out_c_k1.txt  out_compete_learn_on_seed123_1000.txt  out_decay_frozen_seed123_1000.txt  out_decay_learn_on_seed123_1000.txt  out_diag_prune60.txt  out_extreme_k10_i0.txt  out_mixed_frozen_1000.txt  out_mixed_learn_on_1000.txt  out_mixed_learn_on_seed123_1000.txt  out_noise_k1_i90.txt  out_stress_A.txt  out_stress_A_v2.txt  out_stress_C.txt  out_stress_C_v2.txt  pyproject.toml
docs/: HOME_SYNC_v1.md  PROJECT_RECAP_v1_1.md
llm_adapter/: llm_adapter_v0.py
na_gate/: na_gate_cli.py  na_gate_v0.py
scripts/: analyze_10k_run_v1.py  analyze_10k_split_graphs_v1.py  analyze_drift_success_v1.py  ascii_plot_success_v1.py  drift_shift_demo_v1.py  large_batch_demo_v1.py  na_gate_cli.py  user_request_analysis.py  verify_question_trend_v1.py
tests/: test_adversarial_partner_v1.py  test_aggressive_trainer_invariants_v1.py  test_competition_v1.py  test_decay_v1.py  test_diagnostics_and_bump_v1.py  test_drift_trigger_on_rule_shift_v1.py  test_issue_updates_v1.py  test_middle_lane_semantics_v1.py  test_mixed_v1.py  (+16 more)
(+35 files in other folders)
